--- a/HTML/2008.html
+++ b/HTML/2008.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" href="../Multimedia/peugeot2008-min.jpg">
     <!--CSS-->
     <link rel="stylesheet" href="../css/style.css">
+    <!--seo-->
+    <meta name="description" content="características del peugeot 2008">
+    <meta name="keywords" content="2008, peugeot, motor, seguridad, equipamiento, ESP, AFU, ABS">
     <!--ANIMACIONES-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!--BOOTSTRAP-->
