--- a/HTML/208.html
+++ b/HTML/208.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" href="../Multimedia/208gti-min.jpg">
     <!--CSS-->
     <link rel="stylesheet" href="../css/style.css">
+    <!--seo-->
+    <meta name="description" content="Características del peugeot 208">
+    <meta name="keywords" content="208, motor, equipamiento, seguridad">
     <!--ANIMACIONES-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!--BOOTSTRAP-->
