--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" href="./Multimedia/logo-min_preview_rev_1.png">
     <!--CSS-->
     <link rel="stylesheet" href="./css/style.css">
+    <!--seo-->
+    <meta name="description" content="Página del peugeot 208 y 2008">
+    <meta name="keywords" content="peugeot, 208, gt, gti">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
