--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--seo-->
     <meta name="description" content="Página del peugeot 208 y 2008">
     <meta name="keywords" content="peugeot, 208, gt, gti">
+    <script src="https://use.fontawesome.com/e3930d76f3.js"></script>
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
@@ -73,6 +74,25 @@
         </div>
     </section>
 
+    <footer class="pie">
+        <a href="https://www.instagram.com/peugeotarg/?hl=es" target="_blank">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/peugeotarg?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </a>
+        <a href="https://es-la.facebook.com/PeugeotArg/" target="_blank">
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/coderman/" target="_blank">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a href="https://wa.me/+541169658937/?text=Te gustó el diseño del sitio web??, Escribime" target="_blank">
+            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        </a>
+
+
+    </footer>
 </body>
 
 </html>
