--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="../HTML/208.html">Peugeot 208</a></li>
-                <li><a href="../HTML/2008.html">Peugeot 2008</a></li>
+                <li><a href="./HTML/208.html">Peugeot 208</a></li>
+                <li><a href="./HTML/2008.html">Peugeot 2008</a></li>
             </ul>
         </nav>
     </header>
