--- a/HTML/2008.html
+++ b/HTML/2008.html
@@ -12,7 +12,7 @@
     <!--seo-->
     <meta name="description" content="características del peugeot 2008">
     <meta name="keywords" content="2008, peugeot, motor, seguridad, equipamiento, ESP, AFU, ABS">
-    
+
     <!--ANIMACIONES-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!--BOOTSTRAP-->
@@ -48,7 +48,7 @@
                 </div>
                 <div class="escritura">
                     <div class="card-body">
-                        <h5 class="card-title">Motor Peugeot 2008</h5>
+                        <h5 class="card-title">Motor Peugeot 2008 (clickea la imagen)</h5>
                         <p class="card-text"> Brinda excelentes prestaciones, elasticidad y rendimiento en
                             todo momento. 1.6L turboalimentado con 165cv y 240Nm de torque. 
                         </p>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="escritura">
                     <div class="card-body">
-                        <h5 class="card-title">ESP-REF-AFU</h5>
+                        <h5 class="card-title">ESP-REF-AFU (clickea la imagen)</h5>
                         <p class="card-texts"> Estos elementos de seguridad ayudan al conductor
                             a que conducción sea lo más seguro posible:
                         <ul>
