--- a/HTML/208.html
+++ b/HTML/208.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="escritura">
                     <div class="card-body">
-                        <h5 class="card-title">Motor Peugeot 208</h5>
+                        <h5 class="card-title">Motor Peugeot 208 (clickea la imagen)</h5>
                         <p class="card-text">El nuevo 208 GT cuenta con un motor 1.2L turboalimentado de 3 cilindros
                             con 130cv y 230Nm de torque desde las 1750RPM.
                         </p>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="escritura">
                     <div class="card-body">
-                        <h5 class="card-title">Tecnología Adas</h5>
+                        <h5 class="card-title">Tecnología Adas (clickea la imagen)</h5>
                         <p class="card-texts"> Estos elementos de seguridad ayudan al conductor
                             a que conducción sea lo más seguro posible:
                             <ul>
