--- a/HTML/208.html
+++ b/HTML/208.html
@@ -23,7 +23,7 @@
     <header class="head">
         <div class="logo">
 
-            <a href="./index.html"><img src="../Multimedia/image.jpg" alt="logo"></a>
+            <a href="../index.html"><img src="../Multimedia/image.jpg" alt="logo"></a>
         </div>
 
         <nav>
